finish hall office

--- a/assets/ignoreit/halloffice.html
+++ b/assets/ignoreit/halloffice.html
@@ -38,26 +38,26 @@ p{font-size:15px}
 
 <div class="infoclass">Provost<br />
 <strong>Dr. Mohammad Salim Hossain</strong><br />
-Phone: 71483<br />
-Mobile: 01711200410<br />
-Email: pharmasalim@yahoo.com</div>
+Phone: <a class="telephone" href="tel:71483">71483</a><br />
+Mobile: <a class="telephone" href="tel:01711200410">01711200410</a><br />
+Email: <a class="email" href="mailto:pharmasalim@yahoo.com">pharmasalim@yahoo.com</a></div>
 
 <div class="infoclass">Assistant Provost<br />
 <strong>Md. Mizanur Rahman Moghal</strong><br />
-Phone: 01190314094<br />
-Email: mizan.phar@gmail.com</div>
+Phone: <a class="telephone" href="tel:01711200410">01190314094</a><br />
+Email: <a class="email" href="mailto:mizan.phar@gmail.com">mizan.phar@gmail.com</a></div>
 
 <div class="infoclass"><strong>Md. Towhidul Islam</strong><br />
-Phone: 01712593494<br />
-Email: towhid.du@yahoo.com</div>
+Phone: <a class="telephone" href="tel:01711200410">01712593494</a><br />
+Email: <a class="email" href="mailto:towhid.du@yahoo.com">towhid.du@yahoo.com</a></div>
 
 <div class="infoclass"><strong>Md. Tanvir Hossain</strong><br />
-Mobile: 01725346333<br />
-Email: tanvirdb@gmail.com</div>
+Mobile: <a class="telephone" href="tel:01725346333">01725346333</a><br />
+Email: <a class="email" href="mailto:tanvirdb@gmail.com">tanvirdb@gmail.com</a></div>
 
 <div class="infoclass"><strong>Mohammad Ruhul Amin</strong><br />
-Phone: 01724756620<br />
-Email: ruhulmicro13@yahoo.com</div>
+Phone: <a class="telephone" href="tel:01724756620">01724756620</a><br />
+Email: <a class="email" href="mailto:ruhulmicro13@yahoo.com">ruhulmicro13@yahoo.com</a></div>
 
 <div>
 <div class="headertitle">BKH Hall</div>
@@ -65,56 +65,56 @@ Email: ruhulmicro13@yahoo.com</div>
 
 <div class="infoclass">Provost (Acting)<br />
 <strong>Md. Rafiqul Islam</strong><br />
-Phone: 01717300701<br />
-Email: rafiq_du228@yahoo.com</div>
+Phone: <a class="telephone" href="tel:01717300701">01717300701</a><br />
+Email: <a class="email" href="mailto:rafiq_du228@yahoo.com">rafiq_du228@yahoo.com</a></div>
 
 <div class="infoclass">Assistant Provost<br />
 <strong>Fateh Nur robel</strong><br />
-Phone: 01819457050<br />
-Email: rubel.acct@yahoo.com</div>
+Phone: <a class="telephone" href="tel:01819457050">01819457050</a><br />
+Email: <a class="email" href="mailto:rubel.acct@yahoo.com">rubel.acct@yahoo.com</a></div>
 
 <div class="infoclass"><strong>Fatematuz Juhora Evamoni</strong><br />
-Phone: 01710066124<br />
-Email: Eva.nstu@yahoo.com</div>
+Phone: <a class="telephone" href="tel:01710066124">01710066124</a><br />
+Email: <a class="email" href="mailto:Eva.nstu@yahoo.com">Eva.nstu@yahoo.com</a></div>
 
 <div class="infoclass">Section Officer<br />
 <strong>Nargis Akter Helaly</strong><br />
-Phone: 01913134917<br />
-Email: nargishelalynstu@gmail.com</div>
+Phone: <a class="telephone" href="tel:01913134917">01913134917</a><br />
+Email: <a class="email" href="mailto:nargishelalynstu@gmail.com">nargishelalynstu@gmail.com</a></div>
 
 <div>
 <div class="headertitle">Proctor</div>
 </div>
 
 <div class="infoclass"><strong>Dr. Newaz Mohammed Bahadur</strong><br />
-Phone: 71487<br />
-Mobile: 01733066950, 01911110671<br />
-Email: nmbahadur@yahoo.com</div>
+Phone: <a class="telephone" href="tel:71487">71487</a><br />
+Mobile: <a class="telephone" href="tel:01733066950">01733066950</a>, <a class="telephone" href="tel:01911110671">01911110671</a><br />
+Email: <a class="email" href="mailto:nmbahadur@yahoo.com">nmbahadur@yahoo.com</a></div>
 
 <div class="infoclass">Assistant Proctor<br />
 <strong>MD. ANISUZZAMAN (RIMON)</strong><br />
-Mobile: +8801717499749<br />
-Email: rimon49@yahoo.com</div>
+Mobile: <a class="telephone" href="tel:+8801717499749">+8801717499749</a><br />
+Email: <a class="email" href="mailto:rimon49@yahoo.com">rimon49@yahoo.com</a></div>
 
 <div class="infoclass"><strong>Latifa Bulbul</strong><br />
-Phone: 01741676362<br />
-Email: prova_pharm32@yahoo.com</div>
+Phone: <a class="telephone" href="tel:01741676362">01741676362</a><br />
+Email: <a class="email" href="mailto:prova_pharm32@yahoo.com">prova_pharm32@yahoo.com</a></div>
 
 <div class="infoclass"><strong>MD. ROBIUL HASAN (RONY)</strong><br />
-Mobile: +8801718589668<br />
-Email: rhasan_rony@yahoo.com</div>
+Mobile: <a class="telephone" href="tel:+8801718589668">+8801718589668</a><br />
+Email: <a class="email" href="mailto:rhasan_rony@yahoo.com">rhasan_rony@yahoo.com</a></div>
 
 <div class="infoclass"><strong>Mohammad Mohinuzzaman Moyeen</strong><br />
-Phone: 01819509301<br />
-Email: moyeen_envsc@yahoo.com</div>
+Phone: <a class="telephone" href="tel:01819509301">01819509301</a><br />
+Email: <a class="email" href="mailto:moyeen_envsc@yahoo.com">moyeen_envsc@yahoo.com</a></div>
 
 <div>
 <div class="headertitle">Student Advice and Guidance Department</div>
 </div>
 
 <div class="infoclass"><strong>Kaisar Ahmed Rocky</strong><br />
-Phone: 01712630709<br />
-Email: kaisar_rockydu@yahoo.com</div>
+Phone: <a class="telephone" href="tel:01712630709">01712630709</a><br />
+Email: <a class="email" href="mailto:kaisar_rockydu@yahoo.com">kaisar_rockydu@yahoo.com</a></div>
 
 <div>
 <div>
@@ -123,63 +123,63 @@ Email: kaisar_rockydu@yahoo.com</div>
 </div>
 
 <div class="infoclass"><strong>Eng. Mojibur Rahman</strong><br />
-Phone: 01714777766</div>
+Phone: <a class="telephone" href="tel:01714777766">01714777766</a></div>
 
 <div class="infoclass"><strong>Eng. Nahid</strong><br />
-Phone: 01832103742</div>
+Phone: <a class="telephone" href="tel:01832103742">01832103742</a></div>
 
 <div class="headertitle"><span style="font-size:14px;">Web Mineral</span></div>
 
 <div class="infoclass"><strong>Masud</strong><br />
-01922590780</div>
+Phone: <a class="telephone" href="tel:01922590780">01922590780</a></div>
 
 <div>
 <div class="headertitle">Dish connection</div>
 </div>
 
 <div class="infoclass"><strong>Sodesh</strong><br />
-01715692969</div>
+Phone: <a class="telephone" href="tel:01715692969">01715692969</a></div>
 
 <div>
 <div class="headertitle">Plumber</div>
 </div>
 
 <div class="infoclass"><strong>Sobbir</strong><br />
-Phone: 01921749571</div>
+Phone: <a class="telephone" href="tel:01921749571">01921749571</a></div>
 
 <div>
 <div class="headertitle">Electrician</div>
 </div>
 
 <div class="infoclass"><strong>Sohid </strong>(he will work for ASH, BKH)<br />
-Phone: 01825739191</div>
+Phone: <a class="telephone" href="tel:01825739191">01825739191</a></div>
 
 <div class="infoclass"><strong>Jakir</strong> (he will work for VC Banglo)<br />
-Phone: 01720607414</div>
+Phone: <a class="telephone" href="tel:01720607414">01720607414</a></div>
 
 <div>
 <div class="headertitle">Karpenter</div>
 </div>
 
 <div class="infoclass"><strong>Abdul Khalek</strong><br />
-Phone: 01923606467</div>
+Phone: <a class="telephone" href="tel:01923606467">01923606467</a></div>
 
 <div>
 <div class="headertitle">Pump Operator</div>
 </div>
 
 <div class="infoclass"><strong>Abu Sayem</strong><br />
-Phone: 01816867870</div>
+Phone: <a class="telephone" href="tel:01816867870">01816867870</a></div>
 
 <div class="infoclass"><strong>Sohel</strong><br />
-Phone: 01739745415</div>
+Phone: <a class="telephone" href="tel:01739745415">01739745415</a></div>
 
 <div>
 <div class="headertitle">Cleaner</div>
 </div>
 
 <div class="infoclass"><strong>Abdul Rob</strong><br />
-Phone: 01821916129</div>
+Phone: <a class="telephone" href="tel:01821916129">01821916129</a></div>
 
 <div class="infoclass"><strong>Porimol</strong><br />
-Phone: 01812437308</div>
+Phone: <a class="telephone" href="tel:01812437308">01812437308</a></div>
