--- a/assets/ignoreit/emergency.html
+++ b/assets/ignoreit/emergency.html
@@ -36,187 +36,188 @@ p{font-size:15px}
 
 <div class="headertitle">Noakhali Zilla</div>
 
-<div class="infoclass">DC : 61021, 61614<br />
-Fax: 61062, 61757</div>
+<div class="infoclass"><strong>DC</strong> : <a class="telephone" href="tel:61021">61021</a>, <a class="telephone" href="tel:61614">61614</a><br />
+Fax: <a class="telephone" href="tel:61062">61062</a>, <a class="telephone" href="tel:61757">61757</a></div>
 
-<div class="infoclass">ADC: 61005</div>
+<div class="infoclass"><strong>ADC</strong>: <a class="telephone" href="tel:61005">61005</a></div>
 
-<div class="infoclass">NDC: 61245</div>
+<div class="infoclass"><strong>NDC</strong>: <a class="telephone" href="tel:61245">61245</a></div>
 
-<div class="infoclass">UNO: 61095</div>
+<div class="infoclass"><strong>UNO</strong>: <a class="telephone" href="tel:61095">61095</a></div>
 
-<div class="infoclass">Meyor: 61010</div>
+<div class="infoclass"><strong>Meyor</strong>: <a class="telephone" href="tel:61010">61010</a></div>
 
-<div class="infoclass">LGED, Executive Engineer: 61340</div>
+<div class="infoclass"><strong>LGED</strong>, <strong>Executive Engineer</strong>: <a class="telephone" href="tel:61340">61340</a></div>
 
-<div class="infoclass">Power division: 61040</div>
+<div class="infoclass"><strong>Power Division</strong>: <a class="telephone" href="tel:61040">61040</a></div>
 
 <div class="headertitle">Police</div>
 
-<div class="infoclass">Police Super: 61030, 61670<br />
-Fax: 61123</div>
+<div class="infoclass"><strong>Police Super:</strong> <a class="telephone" href="tel:61030">61030</a>, <a class="telephone" href="tel:61670">61670</a><br />
+Fax: <a class="telephone" href="tel:61123">61123</a></div>
 
-<div class="infoclass">Addtional Police Super: 62132, 61047</div>
+<div class="infoclass"><strong>Addtional Police Super:</strong> <a class="telephone" href="tel:62132">62132</a>, <a class="telephone" href="tel:61047">61047</a></div>
 
-<div class="infoclass">OC, Sudharam 62067, 62281</div>
+<div class="infoclass"><strong>OC</strong>, Sudharam: <a class="telephone" href="tel:62067">62067</a>, <a class="telephone" href="tel:62281">62281</a></div>
 
 <div class="headertitle">Fair Service</div>
 
-<div class="infoclass">Assistant Director: 61258</div>
+<div class="infoclass"><strong>Assistant Director:</strong> <a class="telephone" href="tel:61258">61258</a></div>
 
-<div class="infoclass">Maijdi Fair Station: 62031</div>
+<div class="infoclass"><strong>Maijdi Fair Station: </strong><a class="telephone" href="tel:62031">62031</a></div>
 
 <div class="headertitle">Kuriar Service</div>
 
-<div class="infoclass">SA Poribohon, Maijdi: 71006</div>
+<div class="infoclass"><strong>SA Poribohon</strong>, Maijdi: <a class="telephone" href="tel:71006">71006</a></div>
 
-<div class="infoclass">Continental, Maijdi: 01198153030</div>
+<div class="infoclass"><strong>Continental</strong>, Maijdi: <a class="telephone" href="tel:01198153030">01198153030</a></div>
 
-<div class="infoclass">Sundorban, Maijdi: 61846</div>
+<div class="infoclass"><strong>Sundorban</strong>, Maijdi: <a class="telephone" href="tel:61846">61846</a></div>
 
 <div class="headertitle">Journalist of Noakhali</div>
 
-<div class="infoclass">Noakhali Press Club<br />
-Phone: 62082</div>
+<div class="infoclass"><strong>Noakhali Press Club</strong><br />
+Phone: <a class="telephone" href="tel:62082">62082</a></div>
 
-<div class="infoclass">Ittefaq<br />
-Phone: 01712064800<br />
-Email: alamgir.yousuf@gmail.com</div>
+<div class="infoclass"><strong>Ittefaq</strong><br />
+Phone: <a class="telephone" href="tel:01712064800">01712064800</a><br />
+Email: <a class="email" href="mailto:alamgir.yousuf@gmail.com">alamgir.yousuf@gmail.com</a></div>
 
-<div class="infoclass">Inqilab<br />
-Phone: 01711141054<br />
-Email: inqilabnoa@yahoo.com</div>
+<div class="infoclass"><strong>Inqilab</strong><br />
+Phone: <a class="telephone" href="tel:01711141054">01711141054</a><br />
+Email: <a class="email" href="mailto:inqilabnoa@yahoo.com">inqilabnoa@yahoo.com</a></div>
 
-<div class="infoclass">Jugantor<br />
-Phone: 01670909926<br />
-Email: hanifjugantor@yahoo.com</div>
+<div class="infoclass"><strong>Jugantor</strong><br />
+Phone: <a class="telephone" href="tel:01670909926">01670909926</a><br />
+Email: <a class="email" href="mailto:hanifjugantor@yahoo.com">hanifjugantor@yahoo.com</a></div>
 
-<div class="infoclass">Sangbad<br />
-Phone: 01718599551</div>
+<div class="infoclass"><strong>Sangbad</strong><br />
+Phone: <a class="telephone" href="tel:01718599551">01718599551</a></div>
 
-<div class="infoclass">Bhorerkagoj<br />
-phone: 01711181245<br />
-Email: bijonnoakhali@gmail.com</div>
+<div class="infoclass"><strong>Bhorerkagoj</strong><br />
+phone: <a class="telephone" href="tel:01711181245">01711181245</a><br />
+Email: <a class="email" href="mailto:bijonnoakhali@gmail.com">bijonnoakhali@gmail.com</a></div>
 
-<div class="infoclass">Kalerkantho<br />
-Phone: 01711181383<br />
-mironkalerkantho@yahoo.com</div>
+<div class="infoclass"><strong>Kalerkantho</strong><br />
+Phone: <a class="telephone" href="tel:01711181383">01711181383</a><br />
+Email: <a class="email" href="mailto:mironkalerkantho@yahoo.com">mironkalerkantho@yahoo.com</a></div>
 
-<div class="infoclass">Somokal<br />
-Phone: 01711008033<br />
-Email: rudramasud@gmail.com</div>
+<div class="infoclass"><strong>Somokal</strong><br />
+Phone: <a class="telephone" href="tel:01711008033">01711008033</a><br />
+Email: <a class="email" href="mailto:rudramasud@gmail.com">rudramasud@gmail.com</a></div>
 
-<div class="infoclass">Jonokontho<br />
-Phone: 01711858555<br />
-Email: forhadnsu@yahoo.com</div>
+<div class="infoclass"><strong>Jonokontho</strong><br />
+Phone: <a class="telephone" href="tel:01711858555">01711858555</a><br />
+Email: <a class="email" href="mailto:forhadnsu@yahoo.com">forhadnsu@yahoo.com</a></div>
 
-<div class="infoclass">Prothom Alo<br />
-Phone: 01817400170<br />
-Email: p.alonoakhali@gmail.com, palosenbag@gmail.com</div>
+<div class="infoclass"><strong>Prothom Alo</strong><br />
+Phone: <a class="telephone" href="tel:01817400170">01817400170</a><br />
+Email: <a class="email" href="mailto:p.alonoakhali@gmail.com">p.alonoakhali@gmail.com</a>, <a class="email" href="mailto:palosenbag@gmail.com">palosenbag@gmail.com</a></div>
 
-<div class="infoclass">Amader Somoy<br />
-Mobile: 01711050665<br />
-Email: kamrulnoakhali@gmail.com</div>
+<div class="infoclass"><strong>Amader Somoy</strong><br />
+Mobile: <a class="telephone" href="tel:01711050665">01711050665</a><br />
+Email: <a class="email" href="mailto:kamrulnoakhali@gmail.com">kamrulnoakhali@gmail.com</a></div>
 
-<div class="infoclass">Amar Desh &amp; Daily Star<br />
-Mobile: 01556474875<br />
-Email: nurulamin@journalist.com</div>
+<div class="infoclass"><strong>Amar Desh &amp; Daily Star</strong><br />
+Mobile: <a class="telephone" href="tel:01556474875">01556474875</a><br />
+Email: <a class="email" href="mailto:nurulamin@journalist.com">nurulamin@journalist.com</a></div>
 
-<div class="infoclass">Noya Digonto<br />
-Mobile: 01822403945<br />
-Email: hanif_loging@yahoo.com</div>
+<div class="infoclass"><strong>Noya Digonto</strong><br />
+Mobile: <a class="telephone" href="tel:01822403945">01822403945</a><br />
+Email: <a class="email" href="mailto:hanif_loging@yahoo.com">hanif_loging@yahoo.com</a></div>
 
-<div class="infoclass">Jay Jay Din<br />
-mobile: 01712101664<br />
-Email: anmonju@yahoo.com</div>
+<div class="infoclass"><strong>Jay Jay Din</strong><br />
+mobile: <a class="telephone" href="tel:01712101664">01712101664</a><br />
+Email: <a class="email" href="mailto:anmonju@yahoo.com">anmonju@yahoo.com</a></div>
 
-<div class="infoclass">New Age<br />
-Mobile: 01712196787<br />
-Email: bikash@gmail.com</div>
+<div class="infoclass"><strong>New Age</strong><br />
+Mobile: <a class="telephone" href="tel:01712196787">01712196787</a><br />
+Email: <a class="email" href="mailto:bikash@gmail.com">bikash@gmail.com</a></div>
 
-<div class="infoclass">ManobJomin<br />
-Mobile: 01715210600<br />
-Email: nashirbadol@yahoo.com</div>
+<div class="infoclass"><strong>ManobJomin</strong><br />
+Mobile: <a class="telephone" href="tel:01715210600">01715210600</a><br />
+Email: <a class="email" href="mailto:nashirbadol@yahoo.com">nashirbadol@yahoo.com</a></div>
 
-<div class="infoclass">Observer<br />
-Mobile: 01712147269<br />
-Email: dinmd_ncc@yahoo.com</div>
+<div class="infoclass"><strong>Observer</strong><br />
+Mobile: <a class="telephone" href="tel:01712147269">01712147269</a><br />
+Email: <a class="email" href="mailto:dinmd_ncc@yahoo.com">dinmd_ncc@yahoo.com</a></div>
 
-<div class="infoclass">BDnews<br />
-Phone: 01712101664<br />
-Email: anmonju@yahoo.com</div>
+<div class="infoclass"><strong>BDnews</strong><br />
+Phone: <a class="telephone" href="tel:01712101664">01712101664</a><br />
+Email: <a class="email" href="mailto:anmonju@yahoo.com">anmonju@yahoo.com</a></div>
 
-<div class="infoclass">BDnews24.com<br />
-Phone: 01717502266</div>
+<div class="infoclass"><strong>BDnews24.com</strong><br />
+Phone: <a class="telephone" href="tel:01717502266">01717502266</a></div>
 
-<div class="infoclass">Nokhali Web<br />
-phone: 01916553366<br />
-Email: editor@noakhaliweb.com.bd</div>
+<div class="infoclass"><strong>Nokhali Web</strong><br />
+phone: <a class="telephone" href="tel:01916553366">01916553366</a><br />
+Email: <a class="email" href="mailto:editor@noakhaliweb.com.bd">editor@noakhaliweb.com.bd</a></div>
 
-<div class="infoclass">Coloman Noakhali<br />
-Phone: 01711008033<br />
-Email: editor@chalomannoakhali.com</div>
+<div class="infoclass"><strong>Coloman Noakhali</strong><br />
+Phone: <a class="telephone" href="tel:01711008033">01711008033</a><br />
+Email: <a class="email" href="mailto:editor@chalomannoakhali.com">editor@chalomannoakhali.com</a></div>
 
 <div class="headertitle">Private Clinic</div>
 
-<div class="infoclass">Royal Hospital<br />
-Phone: 01811601071</div>
+<div class="infoclass"><strong>Royal Hospital</strong><br />
+Phone: <a class="telephone" href="tel:01811601071">01811601071</a></div>
 
-<div class="infoclass">Good Hill hospital<br />
-Phone: 61335, 61087</div>
+<div class="infoclass"><strong>Good Hill hospital</strong><br />
+Phone: <a class="telephone" href="tel:61335">61335</a>, <a class="telephone" href="tel:61087">61087</a></div>
 
-<div class="infoclass">Prime Hospital<br />
-Phone: 63016, 62376</div>
+<div class="infoclass"><strong>Prime Hospital</strong><br />
+Phone: <a class="telephone" href="tel:63016">63016</a>, <a class="telephone" href="tel:62376">62376</a></div>
 
-<div class="infoclass">Modern Hospital<br />
-Phone: 61081, 62163</div>
+<div class="infoclass"><strong>Modern Hospital</strong><br />
+Phone: <a class="telephone" href="tel:61081">61081</a>, <a class="telephone" href="tel:62163">62163</a></div>
 
-<div class="infoclass">WoodLand Hospital<br />
-Phone; 01713258453</div>
+<div class="infoclass"><strong>WoodLand Hospital</strong><br />
+Phone: <a class="telephone" href="tel:01713258453">01713258453</a></div>
 
 <div class="headertitle">Guest House</div>
 
-<div class="infoclass">Nice Guest House<br />
-Phone: 01729443250</div>
+<div class="infoclass"><strong>Nice Guest House</strong><br />
+Phone: <a class="telephone" href="tel:01729443250">01729443250</a></div>
 
-<div class="infoclass">Al Farhan<br />
-Phone: 62492</div>
+<div class="infoclass"><strong>Al Farhan</strong><br />
+Phone: <a class="telephone" href="tel:62492">62492</a></div>
 
-<div class="infoclass">Hotel Rafsan<br />
-Phone: 62902</div>
+<div class="infoclass"><strong>Hotel Rafsan</strong><br />
+Phone: <a class="telephone" href="tel:62902">62902</a></div>
 
-<div class="infoclass">Hotel Nur Jahan<br />
-Phone: 61593</div>
+<div class="infoclass"><strong>Hotel Nur Jahan</strong><br />
+Phone: <a class="telephone" href="tel:61593">61593</a></div>
 
-<div class="infoclass">Hotel Wayasi<br />
-Phone: 01812161114</div>
+<div class="infoclass"><strong>Hotel Wayasi</strong><br />
+Phone: <a class="telephone" href="tel:01812161114">01812161114</a></div>
 
 <div class="headertitle">Bus Service</div>
 
-<div class="infoclass">Bilash Poribohon<br />
-Phone: 01974474404</div>
+<div class="infoclass"><strong>Bilash Poribohon</strong><br />
+Phone: <a class="telephone" href="tel:01974474404">01974474404</a></div>
 
-<div class="infoclass">VIP Poribohon<br />
-Phone: 62294</div>
+<div class="infoclass"><strong>VIP Poribohon</strong><br />
+Phone: <a class="telephone" href="tel:62294">62294</a></div>
 
-<div class="infoclass">Shahi Poribohon<br />
-Phone: 01712093622</div>
+<div class="infoclass"><strong>Shahi Poribohon</strong><br />
+Phone: <a class="telephone" href="tel:01712093622">01712093622</a></div>
 
-<div class="infoclass">Asia Classic<br />
-Phone: 01767441404</div>
+<div class="infoclass"><strong>Asia Classic</strong><br />
+Phone: <a class="telephone" href="tel:01767441404">01767441404</a></div>
 
-<div class="infoclass">BRTC<br />
-Phone: 01821918400</div>
+<div class="infoclass"><strong>BRTC</strong><br />
+Phone: <a class="telephone" href="tel:01821918400">01821918400</a></div>
 
-<div class="infoclass">Ekushe Poribohon<br />
-Phone: 01678047365</div>
+<div class="infoclass"><strong>Ekushe Poribohon</strong><br />
+Phone: <a class="telephone" href="tel:01678047365">01678047365</a></div>
 
-<div class="infoclass">Upukul Service 01981002934</div>
+<div class="infoclass"><strong>Upukul Service</strong><br />
+Phone: <a class="telephone" href="tel:01981002934">01981002934</a></div>
 
 <div class="headertitle">Train Service</div>
 
-<div class="infoclass">Sonapur: 62220<br />
-Maijdi Court: 62190</div>
+<div class="infoclass"><strong>Sonapur</strong>: <a class="telephone" href="tel:62220">62220</a><br />
+<strong>Maijdi Court</strong>: <a class="telephone" href="tel:62190">62190</a></div>
 
 <div class="headertitle">Mail/Express Trains From Noakhali :</div>
 
