finish academic staff

--- a/assets/ignoreit/Academic_staffs.html
+++ b/assets/ignoreit/Academic_staffs.html
@@ -37,7 +37,7 @@ p{font-size:15px}
 <div class="infoclass"><strong>Sazib Bhowmik</strong><br />
 Lab Instructor<br />
 Phone : <a class="telephone" href="tel:01715-573929">01715-573929</a><br />
-E-mail : sazib.bowmik@yahoo.com</div>
+E-mail : <a class="email" href="mailto:sazib.bowmik@yahoo.com">sazib.bowmik@yahoo.com</a></div>
 
 <div class="infoclass"><strong>Shihab Uddin</strong><br />
 SR Assistant<br />
@@ -60,82 +60,82 @@ Phone : <a class="telephone" href="tel:01815325162">01815325162</a></div>
 <div class="infoclass"><strong>Shafiqul Kabir Khan</strong><br />
 Senior Assistant<br />
 Phone : <a class="telephone" href="tel:+8801727266389">+880-1727266389</a><br />
-E-mail : msk.nstu@gmail.com</div>
+E-mail : <a class="email" href="mailto:msk.nstu@gmail.com">msk.nstu@gmail.com</a></div>
 
 <div class="infoclass"><strong>Md.Shahidul Islam</strong><br />
 Senior Assistant<br />
 Phone : <a class="telephone" href="tel:+8801716951641">+880-1716951641</a><br />
-E-mail : dulal.fims@gmail.com</div>
+E-mail : <a class="email" href="mailto:dulal.fims@gmail.com">dulal.fims@gmail.com</a></div>
 
 <div class="infoclass"><strong>Farhana Akhter</strong><br />
 Senior Assistant<br />
 Phone : <a class="telephone" href="tel:+8801727922861">+880-1727922861</a><br />
-E-mail : farhana.fims@gmail.com &nbsp;</div>
+E-mail : <a class="email" href="mailto:farhana.fims@gmail.com">farhana.fims@gmail.com</a></div>
 
 <div class="infoclass"><strong>Md.Mominul Haq</strong><br />
-LDA Com Computer Operator<br />
+LDA Computer Operator<br />
 Phone : <a class="telephone" href="tel:+8801811862784">+880-1811862784</a><br />
-E-mail : momin fims@gmail.com</div>
+E-mail : <a class="email" href="mailto:momin fims@gmail.com">momin fims@gmail.com</a></div>
 
 <div class="infoclass"><strong>Md.Mizanur Rahaman</strong><br />
-LDA Com Computer Operator<br />
+LDA Computer Operator<br />
 Phone : <a class="telephone" href="tel:+8801819948956">+880-1819948956</a><br />
-E-mail : mizan-nstu@gmail.com</div>
+E-mail : <a class="email" href="mailto:mizan-nstu@gmail.com">mizan-nstu@gmail.com</a></div>
 
 <div class="infoclass"><strong>Manto Chandra Barmon</strong><br />
 Lab Attendant<br />
 Phone : <a class="telephone" href="tel:+8801729985937">+880-1729985937</a><br />
-E-mail : mcbarmon@yahoo.com</div>
+E-mail : <a class="email" href="mailto:mcbarmon@yahoo.com">mcbarmon@yahoo.com</a></div>
 
 <div class="infoclass"><strong>Aminul Islam</strong><br />
 Master Roll Employee<br />
 Phone : <a class="telephone" href="tel:+8801919845356">+880-1919845356</a><br />
-E-mail : mai-nstu@gmail.com</div>
+E-mail : <a class="email" href="mailto:mai-nstu@gmail.com">mai-nstu@gmail.com</a></div>
 
 <div class="headertitle">&nbsp;Pharmacy</div>
 
 <div class="infoclass"><strong>Mohammad Shahab Uddin</strong><br />
 Section officer<br />
 Phone : <a class="telephone" href="tel:01919900955">01919-900955</a><br />
-E-mail : shihab_77@yahoo.com</div>
+E-mail : <a class="email" href="mailto:shihab_77@yahoo.com">shihab_77@yahoo.com</a></div>
 
 <div class="infoclass"><strong>Delwar Hossain</strong><br />
 Lab Technician<br />
 Phone : <a class="telephone" href="tel:01721402063">01721402063</a><br />
-E-mail : <a class="telephone" href="tel:delramija@gmail.com">delramija@gmail.com</a></div>
+E-mail : <a class="email" href="mailto:delramija@gmail.com">delramija@gmail.com</a></div>
 
 <div class="infoclass"><strong>G.M. Moniruzzaman</strong><br />
 Lab Technician<br />
-E-mail: gmmonirnstu@gmail.com<br />
-Phone : <a class="telephone" href="tel:01718286119">01718286119</a></div>
+Phone : <a class="telephone" href="tel:01718286119">01718286119</a><br />
+E-mail: <a class="email" href="mailto:gmmonirnstu@gmail.com">gmmonirnstu@gmail.com</a></div>
 
 <div class="infoclass"><strong>Mohammad Mostaq Ahmed</strong><br />
 LDA<br />
-E-mail : mostak_06@yahoo.com<br />
-Phone : <a class="telephone" href="tel:01716751795">01716751795</a></div>
+Phone : <a class="telephone" href="tel:01716751795">01716751795</a><br />
+E-mail : <a class="email" href="mailto:mostak_06@yahoo.com">mostak_06@yahoo.com</a></div>
 
 <div class="infoclass"><strong>Md. Faruk Azad</strong><br />
 LDA<br />
-E-mail : farukazadnstu@gmail.com<br />
-Phone : <a class="telephone" href="tel:01813324978">01813324978</a></div>
+Phone : <a class="telephone" href="tel:01813324978">01813324978</a><br />
+E-mail : <a class="email" href="mailto:farukazadnstu@gmail.com">farukazadnstu@gmail.com</a></div>
 
 <div class="infoclass"><strong>Md. Altaf Ali</strong><br />
 Lab Attendant<br />
-E-mail : arjualtaf90@gmail.com<br />
-Phone : <a class="telephone" href="tel:01918389709">01918-389709</a> &nbsp;</div>
+Phone : <a class="telephone" href="tel:01918389709">01918-389709</a><br />
+E-mail : <a class="email" href="mailto:arjualtaf90@gmail.com">arjualtaf90@gmail.com</a></div>
 
 <div class="infoclass"><strong>Md. Yusuf</strong><br />
 MLSS<br />
-E-mail : mdyusufnstu@gmail.com<br />
-Phone : <a class="telephone" href="tel:01925092623">01925-092623</a></div>
+Phone : <a class="telephone" href="tel:01925092623">01925-092623</a><br />
+E-mail : <a class="email" href="mailto:mdyusufnstu@gmail.com">mdyusufnstu@gmail.com</a></div>
 
 <div class="headertitle">ACCE</div>
 
 <div class="infoclass"><strong>Md. Ismail Hossain</strong><br />
 Section officer<br />
-E-mail : shiponnstu@gmail.com<br />
 Mobile : <a class="telephone" href="tel:01728150181">01728-150181</a> , <a class="telephone" href="tel:01819985436">01819-985436</a><br />
-Tel : <a class="telephone" href="tel:+88032171485">+88-0321-71485</a></div>
+Tel : <a class="telephone" href="tel:+88032171485">+88-0321-71485</a><br />
+E-mail : shiponnstu@gmail.com</div>
 
 <div class="infoclass"><strong>Ayub&nbsp; Ali</strong><br />
 Lab Technician<br />
@@ -166,7 +166,7 @@ Phone : <a class="telephone" href="tel:01812669662">01812669662</a></div>
 <div class="infoclass"><strong>Mohammad Toyaha</strong><br />
 Section officer<br />
 Phone : <a class="telephone" href="tel:+88032163298">+88032163298</a><br />
-E-mail : toyaha.nstu@gmail.com</div>
+E-mail : <a class="email" href="mailto:toyaha.nstu@gmail.com">toyaha.nstu@gmail.com</a></div>
 
 <div class="infoclass"><strong>Anowar Hussen Shumon</strong><br />
 M.L.M.S<br />
@@ -177,7 +177,7 @@ Phone : <a class="telephone" href="tel:01725369490">01725369490</a></div>
 <div class="infoclass"><strong>A S M Sayem</strong><br />
 Section officer<br />
 Phone: <a class="telephone" href="tel:01716178646">01716178646</a><br />
-Email: sayempt07@yahoo.com</div>
+Email: <a class="email" href="mailto:sayempt07@yahoo.com">sayempt07@yahoo.com</a></div>
 
 <div class="infoclass"><strong>Mohammed Golam Sarwar</strong><br />
 LDA<br />
