--- a/assets/ignoreit/department.html
+++ b/assets/ignoreit/department.html
@@ -97,11 +97,6 @@ Email: <a class="email" href="mailto:rabby_cse_buet@yahoo.com">rabby_cse_buet@ya
 Phone: <a class="telephone" href="tel:01812597258">01812597258</a><br />
 Email: <a class="email" href="mailto:im_towhid@yahoo.com">im_towhid@yahoo.com</a></div>
 
-<p>Lab Instructor<br />
-Sozib bhowmik<br />
-Phone: 01715573929<br />
-Email: <a class="email" href="mailto:sazib.bhowmik@yahoo.com">sazib.bhowmik@yahoo.com</a></p>
-
 <div class="headertitle">Fisheries and Marine Science (FIMS 02)</div>
 
 <div class="infoclass"><strong>DR. MD. ABUL HOSSAIN</strong><br />
@@ -238,12 +233,6 @@ Email: <a class="email" href="mailto:monir.pharma@yahoo.com">monir.pharma@yahoo.
 Phone: <a class="telephone" href="tel:01727446920">01727446920</a></div>
 
 <div class="infoclass"><strong>Mariyam Akter</strong></div>
-
-<p>Section Officer<br />
-Md. Sahab Uddin<br />
-Phone: 01719900955<br />
-Email: shihab_55@yahoo.com<br />
-&nbsp;</p>
 
 <div class="headertitle">Applied Chemistry &amp; Chemical Engineering (ACCE 04)</div>
 
@@ -410,14 +399,9 @@ Email: <a class="email" href="mailto:z_math_du@yahoo.com">z_math_du@yahoo.com</a
 <div class="infoclass"><strong>Mohammad Raquibul Hossain</strong><br />
 phone: <a class="telephone" href="tel:01840607032">01840607032</a> , <a class="telephone" href="tel:01912098449">01912098449</a></div>
 
-<p>Section Officer<br />
-Muhammud Toyaha<br />
-Phone: 01716650750<br />
-Email: toyaha.nstu@gmail.com</p>
-
 <div class="headertitle">English (07)</div>
 
-<p style="text-align: center;"><strong>Chairman &amp; Assistant professor</strong></p>
+<p style="text-align: center;"><u><strong>Chairman &amp; Assistant professor</strong></u></p>
 
 <div class="infoclass"><strong>Afsana Mousume</strong><br />
 Phone: <a class="telephone" href="tel:01714402508">01714402508</a>, <a class="telephone" href="tel:01716269848">01716269848</a><br />
@@ -444,11 +428,6 @@ Phone: <a class="telephone" href="tel:01815865760">01815865760</a></div>
 
 <div class="infoclass"><strong>Md. Ehsanul Hoque</strong><br />
 Phone: <a class="telephone" href="tel:01813171087">01813171087</a></div>
-
-<p>Section officer:<br />
-A S M Sayem<br />
-01716178646<br />
-Email: sayempt07@yahoo.com</p>
 
 <div class="headertitle">Environmental Science and Hazard Studies(ESHS 08)</div>
 
