working with student activities

--- a/assets/ignoreit/introduction.html
+++ b/assets/ignoreit/introduction.html
@@ -32,6 +32,10 @@ p{font-size:15px}
 </style>
 <div class="maintitle">Introduction</div>
 
+<div class="infoclass">The natural setting along with its human habitations of the Southern regions of Bangladesh has been endowed with the vast and immense potentials that can fully be harnessed only through creation of a band of skilled manpower equipped with the latest knowledge of science and technology. In the beginning of its age and expending its activities to spread the light of modern education of Science and Technology and practising wisdom in every field of knowledge.<br />
+<br />
+<strong>Noakhali Science and Technology University</strong> was established with immense hope for maintaining the high quality education. Since its establishment, it is running without any session jam and student politics. This University family is fully determined to gain its ultimate goal of success. Here are all details about the university.</div>
+
 <div class="infoclass">
 <p><u><strong>Establishment:</strong> </u><br />
 <strong>Bill Passed at:</strong> 15th July, 2001<br />
