--- a/assets/ignoreit/student_activities.html
+++ b/assets/ignoreit/student_activities.html
@@ -1,63 +1,110 @@
-<p>NSTU Open Source Network (NSTU OSN)</p>
+<style type="text/css">.infoclass{ font-size:15px;padding:8px; margin-bottom:3px; border-radius: 3px;  background-color:white;-webkit-box-shadow: inset 0px 0px 2px 0px rgba(49, 50, 50, 0.67);
+-moz-box-shadow:    inset 0px 0px 2px 0px rgba(49, 50, 50, 0.67);
+box-shadow:         inset 0px 0px 2px 0px rgba(49, 50, 50, 0.67);}
+body{background-color:#f5f5f5; font-family:serif; line-height:1.3em; border:3px solid #29b6f6; 	border-radius: 6px; padding:3px; padding-top:8px }
+p{font-size:15px}
+.headertitle{width:100%; font-size: 17px; background:#29b6f6; color:#FFFFFF; border-radius: 3px; text-align: center}
+.maintitle{font-weight:bold;width:100%; font-size: 16px; background:#039be5; color:#FFFFFF; border-radius: 15px;padding-top:10px; padding-bottom:10px; text-align: center; margin-bottom:10px}
+.telephone {
+    background-image: url("http://i61.tinypic.com/n6xtmw.png");
+    background-position: 0 0px;
+    background-repeat: no-repeat;
+    background-size: 20px auto;
+    color: black;
+    padding-bottom: 3px;
+    padding-left: 22px;
+    text-decoration: none;
+    padding-top: 2px;
+}
+.telephone:hover{color:#29b6f6}
+.Email {
+    background-image: url("http://i60.tinypic.com/dqm2cy.png");
+    background-position: 3px 3px;
+    background-repeat: no-repeat;
+    background-size: 18px auto;
+    color: black;
+    padding-bottom: 3px;
+    padding-left: 22px;
+    padding-top: 2px;
+    text-decoration: none;
+}
+.Email:hover{color:#29b6f6}
+</style>
+<div class="maintitle">Student Activities</div>
 
-<p>Open source network activities:<br />
-Open Source Network started their journey in Noakhali Science and Technology University from 26 April 2008. Several workshops were arranged by nstu_osn.</p>
+<p>NSTU is very conscious to preserve Bangladesh&#39;s culture. It celebrates International Mother Language Day, Pahela Baishak, Bosonta Baron, Independence Day, Victory Day, University Day, International Anti Drug Day, Friendship Day and other national and international days with actual manner. It also arrange Programming contest and intra- and inter-collage and university debates.<br />
+<br />
+The university has strong cricket, football, volleyball and badminton teams. Intradepartment and interdepartment sport competition is held regularly indoors and outdoors. The university takes parts in inter-university competitions.<br />
+To arrange these event there are some organization. Details here -</p>
 
-<p>&nbsp;&nbsp;&nbsp; * Ubuntu installation and administrative uses<br />
+<div class="headertitle">NSTU Open Source Network (NSTU OSN)</div>
+
+<div class="infoclass">Open source network activities:<br />
+Open Source Network started their journey in Noakhali Science and Technology University from 26 April 2008. Several workshops were arranged by nstu_osn. &nbsp;&nbsp;&nbsp; * Ubuntu installation and administrative uses<br />
 &nbsp;&nbsp;&nbsp; * Open Source philosophy and introducing with PHP, Joomla &amp; wordpress<br />
 &nbsp;&nbsp;&nbsp; * Workshop on mid-level Wordpress<br />
 &nbsp;&nbsp;&nbsp; * Workshop on fedora core<br />
-&nbsp;&nbsp;&nbsp; * Workshop on Red Hat Linux Administration</p>
+&nbsp;&nbsp;&nbsp; * Workshop on Red Hat Linux Administration This local OSN does some jobs related to IT application such as software, website development and so on</div>
 
-<p>This local OSN does some jobs related to IT application such as software, website development and so on</p>
+<div class="infoclass"><strong>Details:</strong> <a href="http://www.bdosn.org">www.bdosn.org</a></div>
 
-<p>Details: http://www.bdosn.org</p>
+<div class="headertitle">Programming Club</div>
 
-<p><br />
-Programming Club<br />
-Based in the School of Computer Science and IT, CSTE Programming Club provides a stimulating, cooperative environment where students can interact and learn from each other by solving various programming problems.</p>
-
-<p>Each year we try to enter teams into regional programming competitions as part of the Association for Computing Machinery International Collegiate Programming Contest (ACM-ICPC).</p>
-
-<p>&nbsp;&nbsp;&nbsp; * Gain and develop good programming skills and general problem solving skills<br />
+<div class="infoclass">Based in the School of Computer Science and IT, CSTE Programming Club provides a stimulating, cooperative environment where students can interact and learn from each other by solving various programming problems. Each year we try to enter teams into regional programming competitions as part of the Association for Computing Machinery International Collegiate Programming Contest (ACM-ICPC). &nbsp;&nbsp;&nbsp; * Gain and develop good programming skills and general problem solving skills<br />
 &nbsp;&nbsp;&nbsp; * Learn how to work in a team<br />
 &nbsp;&nbsp;&nbsp; * Develop programming solutions using various data structures, sorting algorithms, arithmetic, algebra, graph algorithms, and number theory<br />
 &nbsp;&nbsp;&nbsp; * Start a potential research project which may lead to postgrad studies<br />
 &nbsp;&nbsp;&nbsp; * Learn from senior and more experienced students<br />
-&nbsp;&nbsp;&nbsp; * Have fun with other fellow students!</p>
+&nbsp;&nbsp;&nbsp; * Have fun with other fellow students!</div>
 
-<p>Facebook Group: https://www.facebook.com/profile.php?id=297499666939182</p>
+<div class="infoclass"><strong>Facebook Group:</strong> <a href="https://www.facebook.com/profile.php?id=297499666939182">https://www.facebook.com/profile.php?id=297499666939182</a></div>
 
-<p><br />
-MOSHAL Tarunner Moshalci</p>
+<div class="headertitle">MOSHAL Tarunner Moshalci</div>
 
-<p>Moshal is an literary and cultural organization of Noakhali Science and Technology University. It has lightened a campus based cultural movement. It works for arousing latent literary and cultural talents in the NSTU family. It is also trying to spread the view of a good culture among the people. Our purpose is to cherish Bangalee culture and tradition in our heart and flourish them in our works. It works for creating a wonderful cultural atmosphere in the university campus.</p>
+<div class="infoclass">Moshal is an literary and cultural organization of Noakhali Science and Technology University. It has lightened a campus based cultural movement. It works for arousing latent literary and cultural talents in the NSTU family. It is also trying to spread the view of a good culture among the people. Our purpose is to cherish Bangalee culture and tradition in our heart and flourish them in our works. It works for creating a wonderful cultural atmosphere in the university campus. Works: 1. Publishing: Little Magazine, Wallpaper, Bulletin. 2. Organizing Cultural Programs: National Days Celebration, Sahitta Asor. 3. Spreading: Beliefs of Independence War, Beliefs of Humanity.</div>
 
-<p>Works: 1. Publishing: Little Magazine, Wallpaper, Bulletin. 2. Organizing Cultural Programs: National Days Celebration, Sahitta Asor. 3. Spreading: Beliefs of Independence War, Beliefs of Humanity.</p>
+<div class="infoclass"><strong>Our Facebook Page:</strong> <a href="http://www.facebook.com/moshal.nstu">www.facebook.com/moshal.nstu</a><br />
+<strong>Our Facebook Group:</strong> <a href="http://www.facebook.com/groups/1590274951201417">www.facebook.com/groups/1590274951201417</a></div>
 
-<p>Our Facebook Page: www.facebook.com/moshal.nstu Our Facebook Group: www.facebook.com/groups/1590274951201417</p>
+<div class="infoclass"><strong>Contact Person:</strong> Kamrul Huda, <a class="telephone" href="tel:01913147411">01913147411</a></div>
 
-<p>Contact Person: Kamrul Huda, 01913147411</p>
+<div class="headertitle">Science Mania</div>
 
-<p><br />
-Science Mania Let science thoughts be easy and interesting Science Mania is a science thoughts platform of Noakhali Science and Technology University. The science maniac people of this organization are working on spreading ongoing world, what is going in the science arena, heartthrob science verses technology news, gorgeous approaches of technology and of course easier and modern science.</p>
+<div class="infoclass">Science Mania Let science thoughts be easy and interesting Science Mania is a science thoughts platform of Noakhali Science and Technology University. The science maniac people of this organization are working on spreading ongoing world, what is going in the science arena, heartthrob science verses technology news, gorgeous approaches of technology and of course easier and modern science. In these days, science and technology is the first and foremast weapon to go ahead. It is a matter of great sorrow that, usually in our country science is described as a hazy and ambiguous thing from the very beginning of our childhood. So our children and young students cherished a fear for science in their heart. But in real view, science is not so. We, science mania believe that science can be interesting and easy. Simple, easy and friendly explanation of science can fight with this fear and make our people interested on science thinking. Beautiful implementation of science and technology in every sector of society can move the world to a new dimension. If you want to know science and spread the science among the people, you are cordially welcome to the family of science mania. Works: 1. In every weak we organize a weekly discussion. 2. We organize a seminar monthly 3. We publish a &ldquo;Science Deyal Potrika &rdquo; in every month.</div>
 
-<p>In these days, science and technology is the first and foremast weapon to go ahead. It is a matter of great sorrow that, usually in our country science is described as a hazy and ambiguous thing from the very beginning of our childhood. So our children and young students cherished a fear for science in their heart. But in real view, science is not so. We, science mania believe that science can be interesting and easy. Simple, easy and friendly explanation of science can fight with this fear and make our people interested on science thinking. Beautiful implementation of science and technology in every sector of society can move the world to a new dimension. If you want to know science and spread the science among the people, you are cordially welcome to the family of science mania.</p>
+<div class="infoclass"><strong>Our Facebook Page:</strong> <a href="http://www.facebook.com/sciencemania.nstu">www.facebook.com/sciencemania.nstu</a><br />
+<strong>Our Facebook Group:</strong> <a href="http://www.facebook.com/groups/382136268609853">www.facebook.com/groups/382136268609853</a></div>
 
-<p>Works: 1. In every weak we organize a weekly discussion. 2. We organize a seminar monthly 3. We publish a &ldquo;Science Deyal Potrika &rdquo; in every month.</p>
+<div class="infoclass"><strong>Contact Person:</strong> Rabiul Awal, <a class="telephone" href="tel:01827893381">01827893381</a></div>
 
-<p>Our Facebook Page: www.facebook.com/sciencemania.nstu Our Facebook Group: www.facebook.com/groups/382136268609853</p>
+<div class="headertitle">SHITBOSTRO SONGROH ANDOLON, Lets share the warm</div>
 
-<p>Contact Person: Rabiul Awal, 01827893381</p>
+<div class="infoclass">It is a volunteering organization of NSTU. It is established on the motoes of voluntarism, patriotism and humanism. Volunteering is a young phenomenon. Our young volunteers spread the hand of mankind. They are always ready to jumpwith their helping hand in any crisis of our country. The cheerful heroes of the group holds a cordial heart for the winter striken people of Bangladesh. Every winter it collects warm clothes from local areas and bitoron kore among the warm striken poor people. In 2012-13, It has collected a some of three hundred and fifty bosta of warm clothes from Choumuhoni, Maijdee, Begumganj, Sonapur and bitoron it at Nolerchar, Nolangirchar, Janatabajar in Hatia and Noakhali. It also works for the floating childrens of the locality. You are most welcome to the volunteering platform of NSTU.</div>
 
-<p><br />
-SHITBOSTRO SONGROH ANDOLON Lets share the warm</p>
+<div class="infoclass"><strong>Our facebook page:</strong> <a href="http://www.facebook.com/profile.php?id=295258287337794">www.facebook.com/profile.php?id=295258287337794</a><br />
+<strong>Our facebook group:</strong> <a href="http://www.facebook.com/groups/502483806526277">www.facebook.com/groups/502483806526277</a></div>
 
-<p>It is a volunteering organization of NSTU. It is established on the motoes of voluntarism, patriotism and humanism. Volunteering is a young phenomenon. Our young volunteers spread the hand of mankind. They are always ready to jumpwith their helping hand in any crisis of our country. The cheerful heroes of the group holds a cordial heart for the winter striken people of Bangladesh. Every winter it collects warm clothes from local areas and bitoron kore among the warm striken poor people. In 2012-13, It has collected a some of three hundred and fifty bosta of warm clothes from Choumuhoni, Maijdee, Begumganj, Sonapur and bitoron it at Nolerchar, Nolangirchar, Janatabajar in Hatia and Noakhali. It also works for the floating childrens of the locality. You are most welcome to the volunteering platform of NSTU.</p>
+<div class="infoclass">Contact Person: <strong>Anik Das</strong>, <a class="telephone" href="tel:01729443322">01729443322</a></div>
 
-<p>Our facebook page: www.facebook.com/profile.php?id=295258287337794 Our facebook group: www.facebook.com/groups/502483806526277 Contact Person: Anik Das, 01729443322</p>
+<div class="headertitle">Journalist of Our University</div>
 
-<p><br />
-Journalist of Our University</p>
+<div class="infoclass"><strong>Rezaul Karim Bhuiyan Sohag</strong><br />
+Applied Math, 6th Batch<br />
+Noakhalir Kotha<br />
+<a href="http://www.noakhalirkatha24.com">www.noakhalirkatha24.com</a><br />
+Phone: <a class="telephone" href="tel:01811849284">01811849284</a><br />
+Email: shohag.fn@gmail.com</div>
 
-<p>&nbsp;</p>
+<div class="infoclass"><strong>Nurul Karim</strong><br />
+Applied Math, 6th Batch<br />
+Campas Live News<br />
+<a href="http://www.campuslive24.com">www.campuslive24.com</a><br />
+Phone: <a class="telephone" href="tel:01961482528">01961482528</a><br />
+Email: n.karim92@gmail.com</div>
+
+<div class="infoclass"><strong>Hafij Ullah Shamim</strong><br />
+English, 6th Batch<br />
+Banglanews24<br />
+<a href="http://www.banglanews24.com">www.banglanews24.com</a><br />
+Phone: <a class="telephone" href="tel:01829704731">01829704731</a><br />
+Email: hafizullashamim@gmail.com</div>
