working with developer message

--- a/assets/ignoreit/message_developer.html
+++ b/assets/ignoreit/message_developer.html
@@ -1,3 +1,149 @@
-1. Nur Uddin Shamim, MBG 9th
-2. Prottoy, ACCE 9th
-3. Ahmad, FTNS 9th
+<p>প্রথমে সর্বশক্তিমান সৃষ্টিকর্তাকে ধন্যবাদ যার কৃপায় আমরা আমাদের এত বড় প্রজেক্ট মোটামুটি হলেও শেষ করতে পেরেছি। এই প্রজেক্টের সবচেয়ে চ্যালেঞ্জিং অংশ ছিল সঠিক এবং নির্ভুল তথ্য দেয়া। কিন্তু একটা উচ্চশিক্ষার প্রতিষ্ঠানগুলোতে সকল কাজ সঠিকভাবে সম্পন্ন করার জন্য বিভিন্ন পর্যায়ের অনেক সংখ্যাক ব্যাক্তি নিয়োগ থাকেন। অনেকেরই পদন্নোতি হয়, অনেকে শিক্ষাছুটিতে দেশের বাহিরে অবস্থান নেন এবং কোন বিশেষ ভূমিকায় দ্বায়িত্বপ্রাপ্ত ব্যাক্তিদের মধ্যেও পরিবর্তন ঘটে। ব্যাপারটা এমন যে আজ এপ পাবলিশের পর যেই ইনফরমেশন আছে,তা আগামী তিন থেকে ৬ মাসের মধ্যে পর চেক করলে দেখা যাবে এতেও অনেক পরিবর্তন করা দরকার। যাই হোক, তবুও আমরা চেষ্টা করেছি সর্বশেষ তথ্যটি দিতে। ২০১৪ সালের জানুয়ারী মাসে করা রেজিস্টার অফিস থেকে যে ডায়রী সরবরাহ করা হয়েছিল তার সাহায্য নেয়া হয়েছে এপ্লিকেশনটি তৈরি করার সময়। ডায়রী থেকে পাওয়া তথ্যও আমরা ম্যানুয়্যালী আপডেট করেছি বিশেষ করে শিক্ষক এবং একাডেমিক ভবনের স্টাফদের ক্ষেত্রে। তবুও এখানে ১০০ % তথ্যের মধ্যে ২-৩ % তথ্য সমস্যা থাকতে পারে।&nbsp; সেক্ষেত্রে আমাদের সাথে সাথে ইমেইল করে জানাবেন। আমরা চেষ্টা করেছি একটা প্ল্যাটফর্ম তৈরি করে যেতে, প্রথম ভার্সন হওয়ায় ভুল ত্রুটি স্বাভাবিক।&nbsp; আমরা আপনার তথ্যটি ভেরিফাই করে আমাদের সার্ভারে ঠিক করে ফেলব। পরবর্তী ভার্সনে ইউজার নিভুল তথ্য পাবেন।</p>
+
+<p>যদিও গুগল প্লে সার্ভিস স্টোর এপ্লিকেশন আপডেট সিস্টেম দেয় তবুও তথ্য আরো নির্ভুল রাখার জন্য আমরা সফটওয়্যারে নতুন আরেকটা Custom Update ফিচার যোগ করেছি। এটা আমাদের সার্ভারে থাকা ভার্সনকে পিং করবে। যদি তথ্য আপডেট হয় তাহলে ভার্সন চেঞ্জ হবে। ফলে ইউজার ইন্টারনেট চালু করে এপ্লিকেশনটি অন করলেই দেখতে পারবেন কি কি তথ্য আপডেট হয়েছে। এবং ইউজার download now তে ক্লিক করে নতুন ভার্সনটি ডাউনলোড করে নিবেন এবং ইন্সটল করবেন।</p>
+
+<p>আমরা ১০০ % নির্ভুল তথ্য দেয়ার জন্য কাজ করে যাচ্ছি। ২০১৫ সালের জন্য রেজিস্টার অফিস গতবারেরর মত আবার নতুন করে ইংরেজীতে তথ্য সংগ্রহ করছে যেখানে সকল পর্যায়ের কর্মকর্তা কর্মচারীকে ইমেইল এড্রেস ব্যবহার করা বাধ্যতামূলক। সেই ইনফরমেশনটি আমাদের হাতে জানুয়ারী মাসে আসলে আমরা শতভাগ নির্ভুল এবং আপডেট তথ্য দিতে পারব। এপ্লিকেশনটি তৈরির মূল উদ্দেশ্য ছিল যেন সকলের যোগাযোগের নাম্বারগুলো থাকে। আশা করি সবার কাজে লাগবে। এ এপ্লিকেশনটি তৈরি করার পেছনে শ্রদ্ধেয় শিক্ষকমন্ডলী এবং বিভিন্ন পর্যায়ের কর্মকর্তাবৃন্দের সার্বিক সহযোগিতা ও উৎসাহ প্রদান করায় তাদের ধন্যবাদ জানাচ্ছি।</p>
+
+<p>Contributors:<br />
+Mashpy<br />
+CSTE5th Batch<br />
+www.Mashpy.me<br />
+www.fb.com/mashpy</p>
+
+<p>Sazzad Hossain<br />
+CSTE5th Batch<br />
+www.fb.com/sazzadh2</p>
+
+<p>Monir Hossain<br />
+CSTE5th Batch<br />
+www.fb.com/monir.mahmud2</p>
+
+<p>Sanjida Rafin<br />
+CSTE5th Batch<br />
+www.fb.com/sanjida.rafin</p>
+
+<p>Chanpa Mojumder<br />
+CSTE5th Batch<br />
+www.fb.com/chanpa.majumder</p>
+
+<p>Fahmida Poly<br />
+CSTE5th Batch<br />
+www.fb.com/polycste</p>
+
+<p>Mahmud Rahman<br />
+CSTE5th Batch<br />
+www.fb.com/mahmud.nstu</p>
+
+<p>Shahadat Mahmud Bithil<br />
+CSTE5th Batch<br />
+www.fb.com/shahadatmahmud.bithil</p>
+
+<p>Nazmul Islam<br />
+MBG 5th Batch<br />
+www.fb.com/nazmul.microbiology</p>
+
+<p>Anik Das<br />
+English 6th Batch<br />
+www.fb.com/jack.anik.1</p>
+
+<p>Tawhed Rone<br />
+CSTE 7th Batch<br />
+www.towhedrone.com<br />
+www.fb.com/towhedurr</p>
+
+<p>Shiblu Khan<br />
+EPS 8th Batch<br />
+www.economicsbd.com<br />
+www.fb.com/economicsbdmagazine<br />
+www.fb.com/shiblu.khan.96</p>
+
+<p>Robiul Awal<br />
+CSTE 9th Batch<br />
+www.fb.com/rabiulawal2233</p>
+
+<p>Thanks To:</p>
+
+<p>Syful Islam<br />
+CSTE5th Batch<br />
+www.fb.com/syful.islam.10</p>
+
+<p>Tanmoy MH<br />
+FIMS 5th Batch<br />
+www.fb.com/tanmay.mh90</p>
+
+<p>Kawsar Didar<br />
+FIMS 5th Batch<br />
+www.fb.com/kawser.dipo</p>
+
+<p>Rashed (CR)<br />
+ACCE<br />
+5th Batch</p>
+
+<p>Arup Ghosh<br />
+MBG 5th<br />
+www.fb.com/arup.ghosh.77582</p>
+
+<p>Dolon Moni<br />
+Applied Mathmatics<br />
+6th Batch</p>
+
+<p>Rezaul Karim Bhuiyan Sohag<br />
+Applied Mathmatics<br />
+6th Batch<br />
+www.fb.com/rezaulkarim.sohag</p>
+
+<p>Nurul Karim<br />
+Applied Mathmatics<br />
+6th Batch<br />
+www.fb.com/nurul.karim.311</p>
+
+<p>Arafat<br />
+Pharmacy<br />
+6th Batch<br />
+www.fb.com/arafat.boss3</p>
+
+<p>Sadek Hossain<br />
+English 6th<br />
+www.fb.com/sadek.hossain.106</p>
+
+<p>Mahfuje Johny<br />
+FTNS<br />
+7th Batch<br />
+www.fb.com/mahfuje.johny</p>
+
+<p>Sovel Ahsan<br />
+ESHS<br />
+7th Batch<br />
+www.fb.com/sovel.chowdhury</p>
+
+<p>Bishal Biswas<br />
+ICT 8th Batch<br />
+www.fb.com/bishal.biswas1</p>
+
+<p>Topu<br />
+English<br />
+8th Batch</p>
+
+<p>Nur Uddin Shamim<br />
+MBG 9th<br />
+www.fb.com/nuruddin.shamim</p>
+
+<p>Prottoy<br />
+ACCE<br />
+9th Batch</p>
+
+<p>Ahmad<br />
+FTNS<br />
+9th Batch</p>
+
+<p>&nbsp;</p>
+
+<p>&nbsp;</p>
+
+<p>&nbsp;</p>
+
+<p>&nbsp;</p>
+
+<p>&nbsp;</p>
+
+<p>&nbsp;</p>
